--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726351.md#1" target="_blank">【新闻看点】习李再撑林郑 港人：抗争无选择</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726351.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1189006322-150x120.jpg" align ="left"></a>香港特首林郑月娥今天（12月16日）在北京又一次见到了北京最高领导人。习近平和李克强分别在会见中，对林郑和港府“处理香港修例风波”表示肯定。习近平还加重语气重申支持香港警方“严正执法”。而在林郑后院，香港人的怒火依然在烧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:09 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726652.md#1" target="_blank">柳传志本周将卸任联想控股董事长</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726652.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/150615093725100311-150x120.jpg" align ="left"></a>今年75岁的柳传志将正式卸任联想控股董事长，该消息预计将于12月18日官方宣布。这意味着联想第一代企业家将正式完成交接班。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726616.md#1" target="_blank">今年大陆3228家影视公司消失 65%演员没戏演</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111171140403-600x400-150x120.jpg" align ="left"></a>2019年，大陆一线演艺界明星纷纷失业，65%的演员无剧播出，超过3,228家影视公司消失。对此，有分析说，除了经济因素外，也跟当局对影视作品进行“审查”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726617.md#1" target="_blank">中共走投无路 军队押送“中美协议”过关</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LC4OY-150x120.jpg" align ="left"></a>经过18个月的贸易激战，中美双方终于在12月13日同时宣布，双方达成了第一阶段的贸易协议。美方称这是美国经济的一次“巨大胜利”，而中方的表态就很模糊诡异。就在签订协议之前的12月9日至13日，五天内习近平提拔了近200名少将、中将和上将。究竟习近平是如何让中共利益集团同意签订协议的？接下来习近平将面临什么挑战？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:21 AM							</td></tr>
@@ -9,6 +10,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank">华日贸谈报导不实 遭美两部门罕见批评</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-16-at-11.31.30-AM-150x120.png" align ="left"></a>中美双方上周宣布达成原则性的第一阶段贸易协议，美国政府周日（12月15日）罕见刊发声明批评、引述消息人士不实报导的美媒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank">汉翔17日与洛马签约 推台为F16亚太维修中心</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4f7d88f4e9fcd478f0a728abf37a0da5-150x120.jpg" align ="left"></a>中华民国空军正将现有144架F-16A/B升级为F-16V（Block20），并向美国采购66架全新F-16V（Block70），合计达到210架，成为亚太国家当中拥有F-16战机数量最多的国家；汉翔17日将与美商洛克希德马丁公司签署策略联盟合作协议，推动台湾成立F-16战机的亚太维修中心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank">中共打压波特王 蔡英文：台湾社会难接受</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725983.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/015ef1b5590fd87cffa9b6ebfb7fb932-150x120.png" align ="left"></a>网路名人“波特王”与中华民国总统蔡英文拍片遭中国厂商解约，总统蔡英文16日表示遗憾，她强调这件事是台湾社会难以接受的事情，台湾是自由民主的社会，可以自由创作，称台湾总统也是非常自然的事情，若连这样都不行，与台湾社会所珍惜的自由民主价值是很大的违背。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank">日本无印良品输官司 专家提醒投资中国风险</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1151e1e2e3968_ttl7daylru_DSC_04851-150x120.jpg" align ="left"></a>日本无印良品遭中国山寨版无印良品状告侵权，无印良品上诉失败须赔偿原告（北京无印良品）人民币62.6万元。台湾智财专家提醒，在大陆经商智慧财产和营业秘密没有保障，投资中国需注意风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank">猪肉催生河南新首富 身家超千亿</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726093.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/6b9e95008a2b06c4626f19d9e5e56c0a-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，中国大陆猪肉价格暴涨，秦英林凭借牧原股份的股价大涨，不仅在2019年晋升河南首富，其家族财富更是在福布斯内地富豪榜上，反超王健林、李彦宏、雷军等众多商界大佬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank">【十字路口】台大选倒计时 这些暗招或出现</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726050.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e0d8d1b3dfd46e_ttl7dayXPE_20191216-____-DJY-150x120.jpg" align ="left"></a>根据以往经验，往往越靠近投票日，越可能出现一些选举“暗招”，或者台湾人说的“奥步”，来试图扰乱选情、干预选举结果。特别是今年中共对台湾大选的渗透干预相当全面而且用力，所以虽然现在三组总统候选人的民调差距相当大，但是台湾的朋友还是不能掉以轻心，不能排除这些选举“奥步”可能会发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank">莫雷第二？英超球星声援新疆 央视停转播惹议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1192154826-150x120.jpg" align ="left"></a>星期五(12月13日)德国足球明星梅苏特·厄齐尔（Mesut ?zil）在社交媒体发声，抗议中共迫害新家维吾尔人，这随机引起了中共媒体的“口诛笔伐”，对其的“愤怒声讨”不亚于针对NBA教练莫雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 11:08 PM							</td></tr>
@@ -29,8 +31,6 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank">中共控制留学生 破坏美国大学学术自由</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/11/23/n11675424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/classroom-381900_1280-150x120.jpg" align ="left"></a>中共通过驻外使馆对海外留学生进行控制，有西方学者已认识到中共正在系统地破坏西方学术自由，动摇西方价值体系根基，并出台了准则，共同抵制对学术自由的威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank">林郑月娥赴京述职地点突改变 引揣测</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/36-1-150x120.jpg" align ="left"></a>香港特首林郑月娥日前进京述职。今天（12月16日），林郑分别与李克强、习近平见面，汇报香港的最新情况。有报导说，林郑今天的述职地点，由此前的中南海紫光阁改为人民大会堂，引外界揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank">“辱母杀人案”苏银霞出狱 49岁头发全白</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/6a03dc1766fd694f949bbd8833d26a2c-150x120.jpg" align ="left"></a>山东“辱母杀人案”的母亲苏银霞，坐牢3年后，于12月14日刑满释放。现年49岁的苏银霞头发全白了。她说，在监狱特别愁，心理压力特别大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 2:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank">遭中共疯狂仿制武器 俄因未申请专利而无奈</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11724977.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/03/1203071717381119-150x120.jpg" align ="left"></a>中共不断仿制武器让俄罗斯伤透脑筋。近日，有俄罗斯军工领域负责人表示，从航空发动机到战斗机，再到防空导弹，中共无所不仿，但由于没有申请国际专利，俄罗斯对此几乎束手无策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 1:27 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725824.md#1" target="_blank">日本无印良品输官司 专家提醒投资中国风险</a><br></h3>日本无印良品遭中国山寨版无印良品状告侵权，无印良品上诉失败须赔偿原告（北京无印良品）人民币62.6万元。台湾智财专家提醒，在大陆经商智慧财产和营业秘密没有保障，投资中国需注意风险。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725870.md#1" target="_blank">河南高速现多起事故 5人惊慌逃生坠桥死亡</a><br></h3>12月15日晚上7时许，因雨雪天气，河南省三门峡市连霍高速K795连续发生多起交通事故，5名司乘人员惊慌中逃生，翻越墙式护栏意外坠桥死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 7:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725738.md#1" target="_blank">中共军工专家李守泽突然去世 引关注</a><br></h3>日前，现年58岁的中共军工企业、中航飞机股份有限公司（下称中航飞机）副总经理李守泽去世，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11725328.md#1" target="_blank">湖南新晃县一中操场埋尸案明日开审</a><br></h3>曾轰动一时的湖南新晃县一中“操场埋尸案”，明日（12月17日）将公开庭审。嫌疑人杜少平被指控犯故意杀人罪、故意伤害罪、寻衅滋事罪、非法拘禁罪、聚众斗殴罪、强迫交易罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 4:54 PM							</td></tr>
